DBProductRepository tests, started adding tests