@@ -20,6 +20,10 @@ repositories {
     gradlePluginPortal()
 }
 
+scala {
+    version = "2.13.16"
+}
+
 dependencies {
     implementation(libs.scala)
     implementation(libs.bundles.play)
@@ -48,6 +52,26 @@ tasks.withType(ScalaCompile).configureEach {
             "UTF-8"
     ]
 }
+
+tasks.withType(Test).configureEach {
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+        exceptionFormat "full"
+    }
+    jvmArgs = [
+            '-Dconfig.resource=application.test.conf',
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
+    ]
+
+
+    useJUnit()
+}
+
+// Ensure test task depends on compileTestScala
+test.dependsOn compileTestScala
 
 tasks.withType(CopySpec).configureEach {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
